--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://robinhwhwk.github.io/portfolio",
+  "homepage": "https://robinhwhwk.github.io/portfolio/#",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
